Implemented a working version