@@ -49,6 +49,10 @@ android {
     }
 }
 
+ksp {
+    arg("key", "value")
+}
+
 dependencies {
     // Allows this module to access the annotation processor related classes. Otherwise those are
     // only available in java library modules. Inspiration -
@@ -83,4 +87,21 @@ dependencies {
     testImplementation deps.test.junit
     testImplementation deps.kotlinCompileTesting
     testImplementation deps.kotlinCompileTestingKsp
+}
+
+tasks.withType(Test) {
+    if (JavaVersion.current() >= JavaVersion.VERSION_16) {
+        jvmArgs(
+                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        )
+    }
 }
